--- a/public/index.html
+++ b/public/index.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.4.1/dist/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
 
 </head>
-<body style="background-image: url('./assets/kalos.png')">
+<body style="background-image: url('./assets/kalos.png'); height: 814px">
 <div id="app"></div>
 <!-- built files will be auto injected -->
 <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
